--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,31 @@
 </head>
 <body>
   <header class="header">
-    <p>dfhgfdhterj46i567ikytkuy</p>
+    <div class="header-top">
+      <ul class="header-top__menu-items">
+        <li class="header-top__menu-item"><a href="#">Магазины</a></li>
+        <li class="header-top__menu-item"><a href="#">Акции</a></li>
+        <li class="header-top__menu-item"><a href="#">Доставка и оплата</a></li>
+      </ul>
+      <a class="header-top__logotype" href="#">
+        <img class="header-top__logotype-img" src="images/icons/logotype.svg" alt="logotype">
+      </a>
+      <div class="header-top__wrapper">
+        <div class="header-top__address">Москва,  ул. Науки  25</div>
+        <ul class="header-top__user-btns">
+          <li class="header-top__user-btn favorite-btn">
+            <i class="fa-regular fa-heart"></i>
+          </li>
+          <li class="header-top__user-btn user-btn">
+            <i class="fa-solid fa-user-large"></i>
+          </li>
+          <li class="header-top__user-btn basket-btn">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <div class="basket-btn__counter">1</div>
+          </li>
+        </ul>
+      </div>
+    </div>
 
   </header>
 
