--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
         </ul>
       </div>
     </div>
-
+    <div class="header-bottom">
+      <ul class="header-bottom__menu-items">
+        <li class="header-bottom__menu-item"><a href="#">Квадроциклы</a></li>
+        <li class="header-bottom__menu-item"><a href="#">Катера</a></li>
+        <li class="header-bottom__menu-item header-bottom__menu-item_active"><a href="#">Гидроциклы</a></li>
+        <li class="header-bottom__menu-item"><a href="#">Лодки</a></li>
+        <li class="header-bottom__menu-item"><a href="#">Вездеходы</a></li>
+        <li class="header-bottom__menu-item"><a href="#">Снегоходы</a></li>
+        <li class="header-bottom__menu-item"><a href="#">Двигатели</a></li>
+        <li class="header-bottom__menu-item"><a href="#">Запчасти</a></li>
+      </ul>
+    </div>
   </header>
 
 
