created adaptive for header

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 <body>
   <header class="header">
     <div class="header-top">
+      <div class="header-top__hamburger">
+        <i class="fa-solid fa-bars"></i>
+        <a class="header-top__logotype-phone" href="#"></a>
+      </div>
       <ul class="header-top__menu-items">
         <li class="header-top__menu-item"><a href="#">Магазины</a></li>
         <li class="header-top__menu-item"><a href="#">Акции</a></li>
         <li class="header-top__menu-item"><a href="#">Доставка и оплата</a></li>
       </ul>
-      <a class="header-top__logotype" href="#">
-        <img class="header-top__logotype-img" src="images/icons/logotype.svg" alt="logotype">
-      </a>
+      <a class="header-top__logotype" href="#"></a>
       <div class="header-top__wrapper">
         <div class="header-top__address">Москва,  ул. Науки  25</div>
         <ul class="header-top__user-btns">
