--- a/index.html
+++ b/index.html
@@ -51,6 +51,232 @@
     </div>
   </header>
 
+  <section class="main">
+    <div class="main-banner">
+      <div class="main-banner__wrapper">
+        <img class="main-banner__wrapper-img" src="images/slider-banner1.jpg"></img>
+        <img class="main-banner__wrapper-img" src="images/slider-banner1.jpg"></img>
+        <img class="main-banner__wrapper-img" src="images/slider-banner1.jpg"></img>
+        <img class="main-banner__wrapper-img" src="images/slider-banner1.jpg"></img>
+        <img class="main-banner__wrapper-img" src="images/slider-banner1.jpg"></img>
+        <img class="main-banner__wrapper-img" src="images/slider-banner1.jpg"></img>
+      </div>
+      <ul class="main-banner__dots">
+        <li class="main-banner__dot"></li>
+        <li class="main-banner__dot"></li>
+        <li class="main-banner__dot"></li>
+        <li class="main-banner__dot"></li>
+        <li class="main-banner__dot"></li>
+        <li class="main-banner__dot"></li>
+      </ul>
+      <div class="main-banner__arrow-left"></div>
+      <div class="main-banner__arrow-right"></div>
+    </div>
+
+    <div class="main-stock">
+      <div class="main-stock__status">Акция</div>
+      <div class="main-stock__price">
+        190 000&#8381;
+        <div class="main-stock__price-old">225 000&#8381;</div>
+      </div>
+      <img class="main-stock__img" src="images/engine.png"></img>
+      <h3 class="main-stock__title">Лодочный мотор Suzuki DF9.9BRS</h3>
+      <div class="main-stock__info">
+        Акция действует до
+        <div class="main-stock__info-date">31.08.2020</div>
+      </div>
+    </div>
+  </section>
+
+  <section class="search">
+    <ul class="search-categories">
+      <li class="search-category">Поиск по  номеру</li>
+      <li class="search-category search-category_active">Поиск по марке</li>
+      <li class="search-category">Поиск по названию товара</li>
+    </ul>
+    <div class="search-content">
+      <input class="search-content__input-text" type="text" placeholder="Введите номер">
+      <div class="search-content__btn-search">Искать</div>
+    </div>
+    <div class="search-content search-content_active">
+      <input class="search-content__input-text" type="text" placeholder="Введите марку">
+      <div class="search-content__btn-search">Искать</div>
+    </div>
+    <div class="search-content">
+      <input class="search-content__input-text" type="text" placeholder="Введите название товара">
+      <div class="search-content__btn-search">Искать</div>
+    </div>
+  </section>
+
+  <section class="categories">
+    <a href="#"class="categories-item">
+      <div class="categories-item__wrapper">
+        <div class="categories-item__title">Квадроциклы</div>
+        <div class="categories-item__more">
+          Подробее
+          <img src="images/arrow-more.svg" alt="">
+        </div>
+      </div>
+      <div class="categories-item__img">
+        <img src="images/quadrocycles.png" alt="">
+      </div>
+    </a>
+    <a href="#"class="categories-item">
+      <div class="categories-item__wrapper">
+        <div class="categories-item__title">Гидроциклы</div>
+        <div class="categories-item__more">
+          Подробее
+          <img src="images/arrow-more.svg" alt="">
+        </div>
+      </div>
+      <div class="categories-item__img">
+        <img src="images/hydrocycles.png" alt="">
+      </div>
+    </a>
+    <a href="#"class="categories-item">
+      <div class="categories-item__wrapper">
+        <div class="categories-item__title">Катера</div>
+        <div class="categories-item__more">
+          Подробее
+          <img src="images/arrow-more.svg" alt="">
+        </div>
+      </div>
+      <div class="categories-item__img">
+        <img src="images/boat.png" alt="">
+      </div>
+    </a>
+    <a href="#"class="categories-item">
+      <div class="categories-item__wrapper">
+        <div class="categories-item__title">Снегоходы</div>
+        <div class="categories-item__more">
+          Подробее
+          <img src="images/arrow-more.svg" alt="">
+        </div>
+      </div>
+      <div class="categories-item__img">
+        <img src="images/snowcycles.png" alt="">
+      </div>
+    </a>
+    <a href="#"class="categories-item">
+      <div class="categories-item__wrapper">
+        <div class="categories-item__title">Вездеходы</div>
+        <div class="categories-item__more">
+          Подробее
+          <img src="images/arrow-more.svg" alt="">
+        </div>
+      </div>
+      <div class="categories-item__img">
+        <img src="images/allTerain.png" alt="">
+      </div>
+    </a>
+    <a href="#"class="categories-item">
+      <div class="categories-item__wrapper">
+        <div class="categories-item__title">Двигатели</div>
+        <div class="categories-item__more">
+          Подробее
+          <img src="images/arrow-more.svg" alt="">
+        </div>
+      </div>
+      <div class="categories-item__img">
+        <img src="images/engines.png" alt="">
+      </div>
+    </a>
+  </section>
+
+  <section class="popular-goods">
+    <h2 class="popular-goods__title">Популярные товары</h2>
+    <ul class="popular-goods__categories">
+      <li class="popular-goods__category popular-goods__category_active">запчасти</li>
+      <li class="popular-goods__category">моторы</li>
+      <li class="popular-goods__category">шины</li>
+      <li class="popular-goods__category">электроника</li>
+      <li class="popular-goods__category">инструменты</li>
+      <li class="popular-goods__category">аксессуары</li>
+    </ul>
+    <div class="popular-goods__wrapper">
+      <ul class="popular-goods__items">
+        <li class="popular-goods__item">
+          <div class="popular-goods__item-status hide">Sale</div>
+          <div class="popular-goods__item-favorite-btn">
+            <i class="fa-regular fa-heart"></i>
+          </div>
+          <div class="popular-goods__item-img">
+            <div class="popular-goods__item-view-product">посмотреть товар</div>
+            <img src="images/product1.png" alt="product1">
+          </div>
+          <div class="popular-goods__item-title">
+            Спасательный жилет BRP Men's Airflow PFD
+          </div>
+          <div class="popular-goods__item-price">
+            9 800&#8381;
+          </div>
+          <div class="popular-goods__item-add-btn">
+            <i class="fa-solid fa-cart-shopping"></i>
+          </div>
+        </li>
+        <li class="popular-goods__item">
+          <div class="popular-goods__item-status">Sale</div>
+          <div class="popular-goods__item-favorite-btn">
+            <i class="fa-regular fa-heart"></i>
+          </div>
+          <div class="popular-goods__item-img">
+            <div class="popular-goods__item-view-product">посмотреть товар</div>
+            <img src="images/product2.png" alt="product1">
+          </div>
+          <div class="popular-goods__item-title">
+            Спасательный жилет BRP Men's Airflow PFD
+          </div>
+          <div class="popular-goods__item-price">
+            9 800&#8381;
+          </div>
+          <div class="popular-goods__item-add-btn">
+            <i class="fa-solid fa-cart-shopping"></i>
+          </div>
+        </li>
+        <li class="popular-goods__item">
+          <div class="popular-goods__item-status hide">Sale</div>
+          <div class="popular-goods__item-favorite-btn">
+            <i class="fa-regular fa-heart"></i>
+          </div>
+          <div class="popular-goods__item-img">
+            <div class="popular-goods__item-view-product">посмотреть товар</div>
+            <img src="images/product3.png" alt="product1">
+          </div>
+          <div class="popular-goods__item-title">
+            Спасательный жилет BRP Men's Airflow PFD
+          </div>
+          <div class="popular-goods__item-price">
+            9 800&#8381;
+          </div>
+          <div class="popular-goods__item-add-btn">
+            <i class="fa-solid fa-cart-shopping"></i>
+          </div>
+        </li>
+        <li class="popular-goods__item">
+          <div class="popular-goods__item-status">Sale</div>
+          <div class="popular-goods__item-favorite-btn">
+            <i class="fa-regular fa-heart"></i>
+          </div>
+          <div class="popular-goods__item-img">
+            <div class="popular-goods__item-view-product">посмотреть товар</div>
+            <img src="images/product4.png" alt="product1">
+          </div>
+          <div class="popular-goods__item-title">
+            Спасательный жилет BRP Men's Airflow PFD
+          </div>
+          <div class="popular-goods__item-price sold-out">
+            Нет в наличии
+          </div>
+          <div class="popular-goods__item-add-btn sold-out-btn">
+            <a href="#">Сообщить о поступлении</a>
+          </div>
+        </li>
+      </ul>
+      <div class="popular-goods__arrow-left"></div>
+      <div class="popular-goods__arrow-right"></div>
+    </div>
+    <div class="popular-goods__btn-show-more">Показать еще</div>
+  </section>
 
   <script src="js/script.js"></script>
 </body>
