created hydrocycles page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <ul class="header-bottom__menu-items">
         <li class="header-bottom__menu-item"><a href="#">Квадроциклы</a></li>
         <li class="header-bottom__menu-item"><a href="#">Катера</a></li>
-        <li class="header-bottom__menu-item header-bottom__menu-item_active"><a href="#">Гидроциклы</a></li>
+        <li class="header-bottom__menu-item"><a href="catalog.html">Гидроциклы</a></li>
         <li class="header-bottom__menu-item"><a href="#">Лодки</a></li>
         <li class="header-bottom__menu-item"><a href="#">Вездеходы</a></li>
         <li class="header-bottom__menu-item"><a href="#">Снегоходы</a></li>
@@ -760,27 +760,31 @@
     <div class="footer__wrapper">
       <form class="footer__submit">
         <div class="footer__submit-title">Подпишитесь на нашу рассылку 
-          и узнавайте о акция быстрее</div>
+          и узнавайте о акциях быстрее</div>
           <div class="footer__submit-inputs">
             <input type="email" class="footer__submit-input-email" placeholder="Введите ваш e-mail:"></input>
             <button class="footer__submit-input-btn">Отправить</button>
           </div>
       </form>
       <div class="footer__navigation">
-        <ul class="footer__navigation-info">
-          <li class="footer__navigation-info-item footer__navigation-info-title"> <a href="#">Информация</a></li>
-          <li class="footer__navigation-info-item"> <a href="#">О компании</a></li>
-          <li class="footer__navigation-info-item"> <a href="#">Контакты</a></li>
-          <li class="footer__navigation-info-item"> <a href="#">Акции</a></li>
-          <li class="footer__navigation-info-item"> <a href="#">Магазины</a></li>
-        </ul>
-        <ul class="footer__navigation-info">
-          <li class="footer__navigation-info-item footer__navigation-info-title"> <a href="#">Интернет-магазин</a></li>
-          <li class="footer__navigation-info-item"> <a href="#">Доставка и самовывоз</a></li>
-          <li class="footer__navigation-info-item"> <a href="#">Оплата</a></li>
-          <li class="footer__navigation-info-item"> <a href="#">Возврат-обмен</a></li>
-          <li class="footer__navigation-info-item"> <a href="#">Новости</a></li>
-        </ul>
+        <div class="footer__navigation-info">
+          <div class="footer__navigation-info-title dropDown-toggle"><a href="#">Информация</a></div>
+          <ul class="footer__navigation-info-items dropDown-content">
+            <li class="footer__navigation-info-item"><a href="#">О компании</a></li>
+            <li class="footer__navigation-info-item"><a href="#">Контакты</a></li>
+            <li class="footer__navigation-info-item"><a href="#">Акции</a></li>
+            <li class="footer__navigation-info-item"><a href="#">Магазины</a></li>
+          </ul>
+        </div>
+        <div class="footer__navigation-info">
+          <div class="footer__navigation-info-title dropDown-toggle"><a href="#">Интернет-магазин</a></div>
+          <ul class="footer__navigation-info-items dropDown-content">
+            <li class="footer__navigation-info-item"><a href="#">Доставка и самовывоз</a></li>
+            <li class="footer__navigation-info-item"><a href="#">Оплата</a></li>
+            <li class="footer__navigation-info-item"><a href="#">Возврат-обмен</a></li>
+            <li class="footer__navigation-info-item"><a href="#">Новости</a></li>
+          </ul>
+        </div>
         <ul class="footer__navigation-social-links">
           <li class="footer__navigation-social-link"><i class="fa-brands fa-instagram"></i></li>
           <li class="footer__navigation-social-link"><i class="fa-brands fa-vk"></i></li>
