created product page

--- a/hydrocycles.html
+++ b/hydrocycles.html
@@ -21,7 +21,7 @@
         <li class="header-top__menu-item"><a href="#">Акции</a></li>
         <li class="header-top__menu-item"><a href="#">Доставка и оплата</a></li>
       </ul>
-      <a class="header-top__logotype" href="#"></a>
+      <a class="header-top__logotype" href="index.html"></a>
       <div class="header-top__wrapper">
         <div class="header-top__address">Москва,  ул. Науки  25</div>
         <ul class="header-top__user-btns">
