--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li class="header-top__menu-item"><a href="#">Акции</a></li>
         <li class="header-top__menu-item"><a href="#">Доставка и оплата</a></li>
       </ul>
-      <a class="header-top__logotype" href="#"></a>
+      <a class="header-top__logotype" href="index.html"></a>
       <div class="header-top__wrapper">
         <div class="header-top__address">Москва,  ул. Науки  25</div>
         <ul class="header-top__user-btns">
@@ -41,7 +41,7 @@
       <ul class="header-bottom__menu-items">
         <li class="header-bottom__menu-item"><a href="#">Квадроциклы</a></li>
         <li class="header-bottom__menu-item"><a href="#">Катера</a></li>
-        <li class="header-bottom__menu-item"><a href="catalog.html">Гидроциклы</a></li>
+        <li class="header-bottom__menu-item"><a href="hydrocycles.html">Гидроциклы</a></li>
         <li class="header-bottom__menu-item"><a href="#">Лодки</a></li>
         <li class="header-bottom__menu-item"><a href="#">Вездеходы</a></li>
         <li class="header-bottom__menu-item"><a href="#">Снегоходы</a></li>
@@ -121,7 +121,7 @@
         <img src="images/quadrocycles.png" alt="">
       </div>
     </a>
-    <a href="#"class="categories-item">
+    <a href="hydrocycles.html"class="categories-item">
       <div class="categories-item__wrapper">
         <div class="categories-item__title">Гидроциклы</div>
         <div class="categories-item__more">
