--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
         <div class="footer__submit-title">Подпишитесь на нашу рассылку 
           и узнавайте о акциях быстрее</div>
           <div class="footer__submit-inputs">
-            <input type="email" class="footer__submit-input-email" placeholder="Введите ваш e-mail:"></input>
+            <input type="email" name="footerEmail" class="footer__submit-input-email" placeholder="Введите ваш e-mail:"></input>
             <button class="footer__submit-input-btn">Отправить</button>
           </div>
       </form>
