create isTyping function

--- a/hydrocycles.html
+++ b/hydrocycles.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Catalog</title>
   <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -264,8 +265,6 @@
     <li class="pages-counter__item">3</li>
     <li class="pages-counter__item">4</li>
     <li class="pages-counter__item">5</li>
-    <li class="pages-counter__item">...</li>
-    <li class="pages-counter__item">11</li>
   </ul>
 
 
