--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header-top">
       <div class="header-top__hamburger">
         <i class="fa-solid fa-bars"></i>
-        <a class="header-top__logotype-phone" href="#"></a>
+        <a class="header-top__logotype-phone" href="index.html"></a>
       </div>
       <ul class="header-top__menu-items">
         <li class="header-top__menu-item"><a href="#">Магазины</a></li>
@@ -40,14 +40,14 @@
     </div>
     <div class="header-bottom">
       <ul class="header-bottom__menu-items">
-        <li class="header-bottom__menu-item"><a href="#">Квадроциклы</a></li>
-        <li class="header-bottom__menu-item"><a href="#">Катера</a></li>
+        <li class="header-bottom__menu-item"><a href="hydrocycles.html">Квадроциклы</a></li>
+        <li class="header-bottom__menu-item"><a href="hydrocycles.html">Катера</a></li>
         <li class="header-bottom__menu-item"><a href="hydrocycles.html">Гидроциклы</a></li>
-        <li class="header-bottom__menu-item"><a href="#">Лодки</a></li>
-        <li class="header-bottom__menu-item"><a href="#">Вездеходы</a></li>
-        <li class="header-bottom__menu-item"><a href="#">Снегоходы</a></li>
-        <li class="header-bottom__menu-item"><a href="#">Двигатели</a></li>
-        <li class="header-bottom__menu-item"><a href="#">Запчасти</a></li>
+        <li class="header-bottom__menu-item"><a href="hydrocycles.html">Лодки</a></li>
+        <li class="header-bottom__menu-item"><a href="hydrocycles.html">Вездеходы</a></li>
+        <li class="header-bottom__menu-item"><a href="hydrocycles.html">Снегоходы</a></li>
+        <li class="header-bottom__menu-item"><a href="hydrocycles.html">Двигатели</a></li>
+        <li class="header-bottom__menu-item"><a href="hydrocycles.html">Запчасти</a></li>
       </ul>
     </div>
   </header>
@@ -110,7 +110,7 @@
   </section>
 
   <section class="categories">
-    <a href="#"class="categories-item">
+    <a href="hydrocycles.html"class="categories-item">
       <div class="categories-item__wrapper">
         <div class="categories-item__title">Квадроциклы</div>
         <div class="categories-item__more">
@@ -134,7 +134,7 @@
         <img src="images/hydrocycles.png" alt="">
       </div>
     </a>
-    <a href="#"class="categories-item">
+    <a href="hydrocycles.html"class="categories-item">
       <div class="categories-item__wrapper">
         <div class="categories-item__title">Катера</div>
         <div class="categories-item__more">
@@ -146,7 +146,7 @@
         <img src="images/boat.png" alt="">
       </div>
     </a>
-    <a href="#"class="categories-item">
+    <a href="hydrocycles.html"class="categories-item">
       <div class="categories-item__wrapper">
         <div class="categories-item__title">Снегоходы</div>
         <div class="categories-item__more">
@@ -158,7 +158,7 @@
         <img src="images/snowcycles.png" alt="">
       </div>
     </a>
-    <a href="#"class="categories-item">
+    <a href="hydrocycles.html"class="categories-item">
       <div class="categories-item__wrapper">
         <div class="categories-item__title">Вездеходы</div>
         <div class="categories-item__more">
@@ -170,7 +170,7 @@
         <img src="images/allTerain.png" alt="">
       </div>
     </a>
-    <a href="#"class="categories-item">
+    <a href="hydrocycles.html"class="categories-item">
       <div class="categories-item__wrapper">
         <div class="categories-item__title">Двигатели</div>
         <div class="categories-item__more">
