--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
     <div class="header-top">
       <div class="header-top__hamburger">
         <i class="fa-solid fa-bars"></i>
-        <a class="header-top__logotype-phone" href="#"></a>
+        <a class="header-top__logotype-phone" href="index.html"></a>
       </div>
       <ul class="header-top__menu-items">
         <li class="header-top__menu-item"><a href="#">Магазины</a></li>
@@ -239,5 +239,6 @@
     </div>
   </footer>
 
+  <script src="js/product.js" type="module"></script>
 </body>
 </html>
